--- a/HTML/letter_success.html
+++ b/HTML/letter_success.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상차리기</title>
+
+    <link rel="stylesheet" href="../resources/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <img src="./image/icon/sample.jpg" alt="thanks" style="width:100px; height:100px;">
+    <img src="../image/icon/sample.jpg" alt="thanks" style="width:100px; height:100px;">
     <h2> 참여해주셔서 감사합니다 </h2>
-    <button class="home"><a href="./main.html">처음으로</a></button>
+    <button class="btn btn-outline-light"><a href="./main.html">처음으로</a></button>
 </body>
 </html>
