--- a/HTML/letter_success.html
+++ b/HTML/letter_success.html
@@ -10,8 +10,12 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <img src="../image/icon/sample.jpg" alt="thanks" style="width:100px; height:100px;">
-    <h2> 참여해주셔서 감사합니다 </h2>
-    <button class="btn btn-outline-light"><a href="./main.html">처음으로</a></button>
+    <div class="lastContainer">
+        <img src="../image/icon/sample.jpg" alt="thanks" style="width:100px; height:100px;">
+        <h2> 참여해주셔서 감사합니다 </h2>
+        <div class="finish">
+            <button class="btn btn-outline-primary" onclick="location.href='./main.html';">처음으로</button>
+        </div>
+    </div>
 </body>
 </html>
