--- a/HTML/picture_success.html
+++ b/HTML/picture_success.html
@@ -10,12 +10,18 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <img src="../image/icon/sample.jpg" alt="thanks" style="width:100px; height:100px;">
-    <h2> 참여해주셔서 감사합니다 </h2>
-    <h3> 편지로도 축하하는 마음을 전할 수 있어요! </h3>
-    <nav>
-        <button class="btn btn-outline-light"><a href="./letter_food_select.html">편지쓰러 가기</a></button>
-        <button class="btn btn-outline-light"><a href="./main.html">처음으로</a></button>
-    </nav>
+    <div class="lastContainer">
+        <img src="../image/icon/sample.jpg" alt="thanks" style="width:100px; height:100px;">
+        <h2> 참여해주셔서 감사합니다<br> </h2>
+        <h3> 편지로도 축하하는 마음을 전할 수 있어요! </h3>
+        <nav>
+            <div class="finish">
+                <div class="btn-group" role="group" aria-label="picture_success">
+                    <button type="button" class="btn btn-outline-primary" onclick="location.href='./letter_food_select.html';">편지쓰러 가기</button>
+                    <button type="button" class="btn btn-outline-primary" onclick="location.href='./main.html';">처음으로</button>
+                </div>
+            </div>
+        </nav>
+    </div>
 </body>
 </html>
