--- a/static/HTML/letter_food_select.html
+++ b/static/HTML/letter_food_select.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="describe">
-            <p>상 위에 올라갈 음식을 골라주세요!</p>
+            <p>상 위에 올라갈 음식을 골라주시오</p>
         </div>
         <div class="smallContainer">
             <nav>
