--- a/static/HTML/letter_writing.html
+++ b/static/HTML/letter_writing.html
@@ -35,6 +35,9 @@
                     <div class="alert alert-primary" role="alert">
                         *말을 할때는 ᄯᅩᆨ바로 해야합니다. 욕설 등은 삭제됩니다.
                     </div>
+                    <div class="alert alert-primary" role="alert">
+                        *중세국어, 한자도 입력 가능하나 방점은 깨질 수 있습니다.
+                    </div>
                 </div>
             </div>
         </div>
